--- a/index.html
+++ b/index.html
@@ -1,8 +1,54 @@
-<p style="text-align:center"><span style="font-size:36px"><span style="font-family:Trebuchet MS,Helvetica,sans-serif"><strong>NUVESTA<span style="color:#dc143c">.NET</span></strong></span></span></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Greece Golden Visa Map</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        h1 {
+            margin: 20px 0;
+        }
+        iframe {
+            width: 100%;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+    <h1>nuvesta.net</h1>
 
-<p style="text-align:center"><span style="font-family:Trebuchet MS,Helvetica,sans-serif">Invest in your future today.</span></p>
+    <iframe title="Property Investment Requirements for Greece’s Golden Visa by Region"
+            aria-label="Choropleth map"
+            id="datawrapper-chart-09kkT"
+            src="https://datawrapper.dwcdn.net/09kkT/4/"
+            scrolling="no"
+            frameborder="0"
+            style="min-width: 100% !important;"
+            height="766"
+            data-external="1">
+    </iframe>
 
-  
-
-
-<p style="text-align:center">&nbsp;</p>
+    <script type="text/javascript">
+        !function(){
+            "use strict";
+            window.addEventListener("message", function(a){
+                if(void 0 !== a.data["datawrapper-height"]){
+                    var e = document.querySelectorAll("iframe");
+                    for(var t in a.data["datawrapper-height"])
+                        for(var r, i=0; r=e[i]; i++)
+                            if(r.contentWindow === a.source){
+                                var d = a.data["datawrapper-height"][t] + "px";
+                                r.style.height = d;
+                            }
+                }
+            })
+        }();
+    </script>
+</body>
+</html>
